# invenio-curations

./: .editorconfig  .gitignore  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  pyproject.toml  run-js-linter.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  license.rst  make.bat  usage.rst
invenio_curations/: __init__.py  config.py  errors.py  ext.py  proxies.py  searchapp.py  tasks.py  webpack.py
invenio_curations/assets/semantic-ui/js/invenio_curations/deposit/: CurationRequestForm.js  CustomDepositStatusBox.js  DepositBox.js  RequestOrPublishButton.js  StatusDisplay.js  index.js  utils.js  withCurationStatus.js
invenio_curations/assets/semantic-ui/js/invenio_curations/requests/: Buttons.js  Icons.js  ModalTriggers.js  RequestFeed.js  RequestMetadataLayout.js  Status.js  StatusLabel.js  TypeLabel.js  index.js  timelineActionEvents.js
invenio_curations/assets/semantic-ui/js/invenio_curations/search/: CurationRequestItem.js  index.js
invenio_curations/assets/semantic-ui/translations/invenio_curations/: i18next-scanner.config.js  i18next.js  package-lock.json  package.json  translations.pot
invenio_curations/assets/semantic-ui/translations/invenio_curations/messages/: index.js
invenio_curations/assets/semantic-ui/translations/invenio_curations/messages/de/: translations.json
invenio_curations/assets/semantic-ui/translations/invenio_curations/messages/en/: translations.json
invenio_curations/assets/semantic-ui/translations/invenio_curations/scripts/: compileCatalog.js  initCatalog.js
invenio_curations/notifications/: __init__.py  builders.py  generators.py
invenio_curations/requests/: __init__.py  curation.py
invenio_curations/resources/: __init__.py  config.py  resource.py
invenio_curations/services/: __init__.py  comment.py  components.py  config.py  diff.py  errors.py  events.py  facets.py  generators.py  permissions.py  service.py  utils.py
invenio_curations/templates/semantic-ui/invenio_curations/: overview.html
invenio_curations/templates/semantic-ui/invenio_notifications/: curation-request.accept.jinja  curation-request.critique.jinja  curation-request.resubmit.jinja  curation-request.review.jinja  curation-request.submit.jinja
invenio_curations/templates/semantic-ui/invenio_requests/rdm-curation/: index.html
invenio_curations/translations/: messages.pot
invenio_curations/translations/de/LC_MESSAGES/: messages.po
invenio_curations/views/: __init__.py  api.py  ui.py
tests/: conftest.py  diff.py  test_invenio_curations.py
tests/services/: test_service.py
