# -*- coding: utf-8 -*-
#
# Copyright (C) 2024 Graz University of Technology.
#
# Invenio-Curations is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-curations
version = attr: invenio_curations.__version__
description = "Invenio module for generic and customizable curations."
long_description = file: README.rst, CHANGES.rst
keywords = invenio curations
license = MIT
author = Graz University of Technology
author_email = info@tugraz.at
platforms = any
url = https://github.com/tu-graz-library/invenio-curations
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
packages = find:
python_requires = >=3.12
zip_safe = False
install_requires =
    invenio-drafts-resources>=3.0.0
    invenio-requests>=4.1.0
[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    invenio-app>=1.3.2,<2.0.0
    invenio-db[postgresql,mysql]>=1.0.13,<2.0.0
    invenio-search[opensearch2]>=2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    sphinx>=4.5.0
    invenio-app-rdm>=12.0.0,<14.0.0
opensearch1 =
    invenio-search[opensearch1]>=2.1.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    invenio_curations = invenio_curations:InvenioCurations
invenio_base.api_apps =
    invenio_curations = invenio_curations:InvenioCurations
invenio_base.blueprints =
    invenio_curations = invenio_curations.views:create_ui_blueprint
invenio_base.api_blueprints =
    invenio_curations = invenio_curations.views:create_curations_bp
invenio_base.finalize_app =
    invenio_curations = invenio_curations.ext:finalize_app
invenio_celery.tasks =
    invenio_curations = invenio_curations.tasks
invenio_i18n.translations =
    messages = invenio_curations
invenio_assets.webpack =
    invenio_curations = invenio_curations.webpack:curations
invenio_requests.types =
    curation_review = invenio_curations.requests:CurationRequest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_curations/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = Graz University of Technology
msgid_bugs_address = info@tugraz.at
mapping-file = babel.ini
output-file = invenio_curations/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_curations/translations/messages.pot
output-dir = invenio_curations/translations/

[update_catalog]
input-file = invenio_curations/translations/messages.pot
output-dir = invenio_curations/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_curations --cov-report=term-missing
testpaths = docs tests invenio_curations
