# -*- coding: utf-8 -*-
#
# Copyright (C) 2024-2026 Graz University of Technology.
#
# Invenio-Curations is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-curations
version = attr: invenio_curations.__version__
description = "Invenio module for generic and customizable curations."
long_description = file: README.rst, CHANGES.rst
keywords = invenio curations
license = MIT
author = Graz University of Technology
author_email = info@tugraz.at
platforms = any
url = https://github.com/tu-graz-library/invenio-curations
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.14

[options]
include_package_data = True
packages = find:
python_requires = >=3.12
zip_safe = False
install_requires =
    invenio-drafts-resources>=8.0.0
    invenio-rdm-records>=24.0.0
    invenio-requests>=12.0.0
    nh3>=0.2.0

[options.extras_require]
tests =
    invenio-app>=3.0.0,<4.0.0
    invenio-app-rdm>=14.0.0b5.dev0,<15.0.0
    invenio-db[postgresql,mysql]>=2.2.0,<3.0.0
    invenio-search[opensearch2]>=3.0.0,<4.0.0
    pytest-black>=0.6.0
    pytest-invenio>=4.0.0,<5.0.0
    sphinx>=4.5.0
    types-flask>=1.1.6
    ruff>=0.1.0
    mypy>=1.15.0
    types-setuptools>=78.1.0
opensearch1 =
    invenio-search[opensearch1]>=3.0.0,<4.0.0
opensearch2 =
    invenio-search[opensearch2]>=3.0.0,<4.0.0

[options.entry_points]
invenio_base.apps =
    invenio_curations = invenio_curations:InvenioCurations
invenio_base.api_apps =
    invenio_curations = invenio_curations:InvenioCurations
invenio_base.blueprints =
    invenio_curations = invenio_curations.views:create_ui_blueprint
invenio_base.api_blueprints =
    invenio_curations = invenio_curations.views:create_curations_bp
invenio_base.finalize_app =
    invenio_curations = invenio_curations.ext:finalize_app
invenio_celery.tasks =
    invenio_curations = invenio_curations.tasks
invenio_i18n.translations =
    messages = invenio_curations
invenio_assets.webpack =
    invenio_curations = invenio_curations.webpack:curations
invenio_requests.types =
    curation_review = invenio_curations.requests:CurationRequest

[build_sphinx]
source_dir = docs/
build_dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_curations/translations/
use_fuzzy = True

[extract_messages]
copyright_holder = Graz University of Technology
msgid_bugs_address = info@tugraz.at
mapping_file = babel.ini
output_file = invenio_curations/translations/messages.pot
add_comments = NOTE

[init_catalog]
input_file = invenio_curations/translations/messages.pot
output_dir = invenio_curations/translations/

[update_catalog]
input_file = invenio_curations/translations/messages.pot
output_dir = invenio_curations/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --doctest-glob="*.rst" --doctest-modules --cov=invenio_curations --cov-report=term-missing
testpaths = docs tests invenio_curations
